Update 'l2d7y8zdz-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:07bc2572ee5d92622b2da8ec4c3eb216fa6f8b18@sha256:ab9210bef6f8007da360927178ce576940851f0b09f2967e125f74246df7ecdb

--- a/components/l2d7y8zdz-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/l2d7y8zdz-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: l2d7y8zdz-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:07bc2572ee5d92622b2da8ec4c3eb216fa6f8b18@sha256:ab9210bef6f8007da360927178ce576940851f0b09f2967e125f74246df7ecdb
+          name: container-image
